nexus_token/build_output.txt
    Checking nexus_token v0.0.0 (D:\stellar-nexus\nexus_token\contracts\nexus_token)
error[E0599]: no method named `set_metadata` found for struct `Client<'a>` in the current scope
  --> contracts\nexus_token\src\lib.rs:31:16
   |
31 |         client.set_metadata(&metadata);
   |                ^^^^^^^^^^^^ method not found in `Client<'_>`

error[E0599]: no method named `mint` found for struct `Client<'a>` in the current scope
  --> contracts\nexus_token\src\lib.rs:46:16
   |
46 |         client.mint(&to, &amount);
   |                ^^^^ method not found in `Client<'_>`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `nexus_token` (lib) due to 2 previous errors
